<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.omar_hidrogo_local.registrodatos.DetalleDatos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/confirmardatos"
        android:textSize="@dimen/confirmardatos"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_below="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topnombre"
        android:layout_marginLeft="@dimen/lefttext">

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confnombre"
            android:textStyle="italic"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_below="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/lefttext">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conffech"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conffechanacimiento"
            android:layout_marginLeft="@dimen/leftleft"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_below="@+id/LinearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/lefttext">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvtel"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvtelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostel"
            android:layout_marginLeft="@dimen/leftleft"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_below="@+id/LinearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/lefttext">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvemail"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mosemail"
            android:layout_marginLeft="@dimen/leftleft"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_below="@+id/LinearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/lefttext">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvdesc"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvdescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mosdesc"
            android:layout_marginLeft="@dimen/leftleft"
            android:textStyle="italic"/>

    </LinearLayout>

        <Button
            android:id="@+id/btEditar"
            android:layout_width="@dimen/boton"
            android:layout_height="wrap_content"
            android:text="@string/boton2"
            android:textAllCaps="false"
            android:textSize="@dimen/registro"
            android:textStyle="italic"
            android:theme="@style/MiBoton"
            android:layout_marginTop="51dp"
            android:gravity="center"
            android:layout_below="@+id/LinearLayout5"
            android:layout_centerHorizontal="true"
            android:onClick="editar"/>


</RelativeLayout>
