<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omar_hidrogo_local.registrodatos.MainActivity">




    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/registro"
            android:textStyle="italic"/>


        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:contextClickable="false"
            android:datePickerMode="spinner"
            android:soundEffectsEnabled="false"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout1"
        >

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/telefono"
            android:textSize="@dimen/registro"
            android:textStyle="italic" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2"
        >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/registro"
            android:textStyle="italic"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout3"
        >

        <EditText
            android:id="@+id/etDescCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des_cont"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/registro"
            android:textStyle="italic"/>

    </android.support.design.widget.TextInputLayout>

<RelativeLayout
    android:layout_below="@id/textInputLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:textAllCaps="false"
        android:textSize="@dimen/registro"
        android:textStyle="italic"
        android:theme="@style/MiBoton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>


</RelativeLayout>

